--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Grey+Qo:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="welcome-message">Welcome to our function</div>
+    <div id="welcome-message">You are Invited to join us!</div>
     <div class="invitation-container">
         <h1>You're Invited!</h1>
         <h2>Baby Shower for Swathi Gokulakannan</h2>
